--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,27 +11,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
-        with: { java-version: "17", distribution: "temurin" }
+        with:
+          java-version: "17"
+          distribution: "temurin"
+
       - name: Run tests
-        run: ./gradlew test  # ajustar conforme seu comando
+        run: ./gradlew test
 
-  build-and-push:
-    needs: test
-    if: success()
-    runs-on: ubuntu-latest
-    steps:
       - uses: actions/checkout@v4
+
       - name: Login Dockerhub
-	      env:
-        	DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-        	DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-       
-	    run: docker login -u ${{DOCKER_USERNAME}} -p {{DOCKER_PASSWORD}} 
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login -u ${{ DOCKER_USERNAME }} -p ${{ DOCKER_PASSWORD }}
 
-- name: Build Docker image
-	run: docker build -t botpcd .
--name: Push to Dockerhub
-	run: docker push victoryghor/botpcd:latest .
+      - name: Build Docker image
+        run: docker build -t botpcd .
 
+      - name: Push to Dockerhub
+        run: docker push victoryghor/botpcd:latest
