--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Push to Dockerhub
         run: docker push victoryghor/botpcd:latest
 
-  deploy:
+  build:
     runs-on: self-hosted
     needs: test
     steps:
@@ -41,5 +41,5 @@ jobs:
       - name: Delete Old docker container
         run: sudo docker rm -f botpcd-container || true
       - name: Run Docker Container
-        run: docker run -d -p 8080:8080 --name botpcd-container
+        run: docker run -d -p 8080:8080 --name botpcd-container victoryghor/botpcd:latest
 
