--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,8 +36,10 @@ jobs:
     runs-on: self-hosted
     needs: test
     steps:
+      - name: Login Dockerhub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Pull Docker image
-        run: sudo docker pull -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} victoryghor/botpcd:latest
+        run: sudo docker pull victoryghor/botpcd:latest
       - name: Delete Old docker container
         run: sudo docker rm -f botpcd-container || true
       - name: Run Docker Container
