--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,9 +39,9 @@ jobs:
       - name: Login Dockerhub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Pull Docker image
-        run: sudo docker pull victoryghor/botpcd:latest
+        run: docker pull victoryghor/botpcd:latest
       - name: Delete Old docker container
-        run: sudo docker rm -f botpcd-container || true
+        run: docker rm -f botpcd-container || true
       - name: Run Docker Container
         run: docker run -d -p 8080:8080 --name botpcd-container victoryghor/botpcd:latest
 
