--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=BotPCD
-whatsapp.token=ajskjfaiebguw
+whatsapp.token=ajskjfaiebguw # ${WHATSAPP_TOKEN}
 whatsapp.api.version=v20.0
