--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=BotPCD
 whatsapp.api.token=${WHATSAPP_API_TOKEN}
-whatsapp.api.version=v20.0
 spring.datasource.url=jdbc:postgresql://localhost:5432/botpcd
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
