--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=BotPCD
 whatsapp.api.token=${WHATSAPP_API_TOKEN}
-spring.datasource.url=jdbc:postgresql://localhost:5432/botpcd
+spring.datasource.url=${WHATSAPP_DATABASE_URL:jdbc:postgresql://localhost:5432/botpcd}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_USERNAME:root}
