--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -27,7 +27,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t victoryghor/botpcd .
+        run: docker build --no-cache -t victoryghor/botpcd .
 
       - name: Push to Dockerhub
         run: docker push victoryghor/botpcd:latest
