--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Delete Old docker container
         run: docker rm -f botpcd-container || true
       - name: Run Docker Container
-        run: docker run -d -p 8080:8080 --name botpcd-container -e DB_USERNAME=${{secrets.DB_USER}} -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} -e DB_HOST=${{ secrets.DB_HOST }} victoryghor/botpcd:latest
+        run: docker run -e DB_USERNAME=${{secrets.DB_USER}} -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} -e DB_HOST=${{ secrets.DB_HOST }} -p 8080:8080 --name botpcd-container victoryghor/botpcd:latest
 
