--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=BotPCD
 whatsapp.api.token=${WHATSAPP_API_TOKEN}
+whatsapp.verify.token=${WHATSAPP_VERIFY_TOKEN}
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/botpcd
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
