--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 whatsapp.api.token=teste
+whatsapp.app.secret=fakeappsecret
 whatsapp.verify.token=teste
