Put the cloud SQL connection in the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=BotPCD
 whatsapp.api.token=${WHATSAPP_API_TOKEN}
 whatsapp.verify.token=${WHATSAPP_VERIFY_TOKEN}
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/botpcd
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
+whatsapp.app.secret=${WHATSAPP_APP_SECRET}
+
+# Configuração do Google Cloud SQL com Unix Socket
+spring.cloud.gcp.sql.instance-connection-name=${CLOUD_SQL_CONNECTION_NAME}
+spring.cloud.gcp.sql.database-name=botpcd
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-whatsapp.app.secret=${WHATSAPP_APP_SECRET}
+
+# Configurações do JPA e Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
