run the tests and remove the code of deafblided

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,19 @@
+# Nome da aplicação
 spring.application.name=BotPCD
-spring.datasource.url=jdbc\:h2\:mem\:testdb\;DB_CLOSE_ON_EXIT\=FALSE\;DB_CLOSE_DELAY\=-1
+# Desabilita a autoconfiguração do Google Cloud SQL para os testes
+spring.cloud.gcp.sql.enabled=false
+# Configuração do banco de dados H2 em memória para testes
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=root
+
+# Configuração do Hibernate para o dialeto H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# 'create-drop' cria o schema no início dos testes e o destrói no final
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Tokens e segredos falsos para o ambiente de teste
 whatsapp.api.token=teste
 whatsapp.app.secret=fakeappsecret
 whatsapp.verify.token=teste
